[project]
name = "reviewd"
version = "0.5.0"
description = "Local AI code reviewer for GitHub and BitBucket PRs — uses Claude, Gemini, or Codex CLI to review pull requests and post structured comments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Simion Agavriloaei", email = "hi@simion.cv"}]
keywords = ["code-review", "ai", "github", "bitbucket", "pull-request", "claude", "gemini", "codex", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.3.1,<9",
    "httpx>=0.28.1,<1",
    "pyyaml>=6.0,<7",
    "questionary>=2.1.1,<3",
]

[project.scripts]
reviewd = "reviewd.cli:main"

[project.urls]
Homepage = "https://github.com/simion/reviewd"
Repository = "https://github.com/simion/reviewd"
Issues = "https://github.com/simion/reviewd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22",
    "ruff>=0.8",
    "black>=24",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["SIM108"]

[tool.ruff.lint.per-file-ignores]
"src/reviewd/prompt.py" = ["E501"]

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true
preview = true
